[package]
name = "port-anchor-adaptor"
description = "Adaptors to call into Port variable rate lending program."
version = "0.3.3"
edition = "2021"
license = "Apache-2.0"
homepage = "https://port.finance"
repository = "https://github.com/port-finance/sundial"
authors = ["Port Finance Team <hello@port.finance>"]
keywords = ["solana", "anchor", "defi", "port"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
port-variable-rate-lending-instructions = "0.2.9"
port-staking-instructions = "0.2.0"
anchor-lang = "0.22.1"
solana-maths = "0.1.2"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"
